--- a/views/additem.jade
+++ b/views/additem.jade
@@ -4,7 +4,7 @@ html
         link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap.min.css')
         link(rel='stylesheet', href='')
         script(src='/bootstrap/dist/js/bootstrap.min.js')
-        script(src='')
+        script(src='https://code.jquery.com/jquery-3.2.1.min.js')
      body
          .main.container
              .row
@@ -18,8 +18,8 @@ html
                               div.form-group
                                   label(for='name') Item Name:
                                   input#name.form-control(type='text', placeholder='Item Name', name='name')
-                               div.form-gropu
-                                   label(for='quantity')
-                                   input#quantity.form-control(type='number', placeholder='Quantity', name='quantity')
+                               div.form-group
+                                   label(for='qty')
+                                   input#qty.form-control(type='number', placeholder='Quantity', name='qty')
                                 button.btn.btn-primary(type='submit') Add
              div.footer
